<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/student_name"
        android:textSize="55sp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:layout_below="@id/name_text"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/selfie"
        android:contentDescription="@string/selfie" />

    <Button
        android:id="@+id/first2second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:text="@string/toNext"
        android:scaleX="1.5"
        android:scaleY="1.5"/>


</RelativeLayout>